Fix some z-indexes so things look nicer when you open settings or vocab info

--- a/app/components/study/prompt/StudyPromptComponent.scss
+++ b/app/components/study/prompt/StudyPromptComponent.scss
@@ -119,7 +119,7 @@ gelato-component[data-name='study-prompt'] {
       left: 0;
       position: absolute;
       top: 0;
-      z-index: 6000;
+      z-index: 5000;
     }
   }
 
